Add: Interactors and controllers for verification
